# VulkanContainer

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  compile_shaders.py  deps.dot  dockerbuild.sh  dockerfile  download_packages.py  imgui.ini  main.cpp  rebuild.py  setup_vcpkg.py  vcpkg-configuration.json  vcpkg.json
.github/: agents.md  copilot-instructions.md
cmake/: Assets.cmake  CompileShaders.cmake  Dependencies.cmake  DependenciesSettings.cmake  FetchBoost.cmake  FetchGLFW.cmake  FetchGLM.cmake  FetchGoogleTest.cmake  FetchVolk.cmake  FetchVulkanHeaders.cmake  FindVulkan.cmake  Options.cmake  Shaders.cmake  fetch_buildingsmart_ifc5_models.cmake  fetch_buildingsmart_sample_test_files.cmake  (+4 more)
src/: CMakeLists.txt  ContainerCore.cpp  main.cpp
src/app/: Application.cpp
src/ecs/: CMakeLists.txt  World.cpp
src/geometry/: CMakeLists.txt  DotBimLoader.cpp  GltfModelLoader.cpp  IfcTessellatedLoader.cpp  IfcxLoader.cpp  Mesh.cpp  Model.cpp  UsdLoader.cpp  stb_impl.cpp  tinygltf_impl.cpp  vma_impl.cpp
src/renderer/: BimManager.cpp  BloomManager.cpp  CameraController.cpp  CommandBufferManager.cpp  DebugOverlayRenderer.cpp  DebugUiPresenter.cpp  DeferredRasterFrameState.cpp  DeferredRasterLighting.cpp  DeferredRasterPostProcess.cpp  DeferredRasterTechnique.cpp  DeferredRasterTransformGizmo.cpp  EnvironmentManager.cpp  ExposureManager.cpp  FrameRecorder.cpp  FrameResourceManager.cpp  FrameResourceRegistry.cpp  GpuCullManager.cpp  GraphicsPipelineBuilder.cpp  LightingManager.cpp  OitManager.cpp  PipelineRegistry.cpp  RenderGraph.cpp  RenderPassGpuProfiler.cpp  RenderPassManager.cpp  RenderSurfaceInteractionController.cpp  RenderTechnique.cpp  RendererFrontend.cpp  RendererTelemetry.cpp  SceneController.cpp  SceneViewport.cpp  ScreenshotCaptureRecorder.cpp  ShadowCullManager.cpp  ShadowManager.cpp  TinyExrImpl.cpp  VulkanContext.cpp  VulkanContextInitializer.cpp  WindowInputBridge.cpp
src/renderer/bim/: BimCoordinationOverlay.cpp  BimDrawCompactionPlanner.cpp  BimDrawFilterState.cpp  BimDrawingExport.cpp  BimFrameDrawRoutingPlanner.cpp  BimFrameGpuVisibilityRecorder.cpp  BimGeoreferenceTransform.cpp  BimLightingOverlayPlanner.cpp  BimLightingOverlayRecorder.cpp  BimManager.cpp  BimMeasurementSnapping.cpp  BimMetadataCatalog.cpp  BimMetadataIndex.cpp  BimModelCompare.cpp  BimPrimitivePassPlanner.cpp  BimPrimitivePassRecorder.cpp  BimRelationshipGraph.cpp  BimScheduleExtractor.cpp  BimSectionCapBuilder.cpp  BimSectionClipCapPassPlanner.cpp  BimSectionClipCapPassRecorder.cpp  BimSurfaceDrawRoutingPlanner.cpp  BimSurfacePassPlanner.cpp  BimSurfacePassRecorder.cpp  BimSurfaceRasterPassRecorder.cpp
src/renderer/core/: CommandBufferScopeRecorder.cpp  FrameRecorder.cpp  RenderGraph.cpp  RenderPassGpuProfiler.cpp  RenderPassManager.cpp  RenderPassScopeRecorder.cpp  RenderTechnique.cpp  RendererFrontend.cpp  RendererMsaa.cpp  RendererTelemetry.cpp  ScreenshotCaptureRecorder.cpp
src/renderer/culling/: GpuCullManager.cpp
src/renderer/debug/: DebugOverlayRenderer.cpp  DebugUiPresenter.cpp
src/renderer/deferred/: DeferredDirectionalLightingRecorder.cpp  DeferredLightGizmoPlanner.cpp  DeferredLightGizmoRecorder.cpp  DeferredLightingDescriptorPlanner.cpp  DeferredLightingPassPlanner.cpp  DeferredPointLightingDrawPlanner.cpp  DeferredPointLightingRecorder.cpp  DeferredRasterBimSurfacePassRecorder.cpp  DeferredRasterDebugOverlayPlanner.cpp  DeferredRasterDebugOverlayRecorder.cpp  DeferredRasterDepthReadOnlyTransitionRecorder.cpp  DeferredRasterFrameGraphContext.cpp  DeferredRasterFrameState.cpp  DeferredRasterFrustumCullPassPlanner.cpp  DeferredRasterFrustumCullPassRecorder.cpp  DeferredRasterGuiPassRecorder.cpp  DeferredRasterHiZDepthTransitionRecorder.cpp  DeferredRasterHiZPassPlanner.cpp  DeferredRasterImageBarrier.cpp  DeferredRasterLighting.cpp  DeferredRasterLightingPassRecorder.cpp  DeferredRasterPostProcess.cpp  DeferredRasterSceneColorReadBarrierRecorder.cpp  DeferredRasterScenePassRecorder.cpp  DeferredRasterTechnique.cpp  DeferredRasterTileCullPlanner.cpp  DeferredRasterTileCullRecorder.cpp  DeferredRasterTransformGizmo.cpp  DeferredTransparentOitFramePassRecorder.cpp  DeferredTransparentOitRecorder.cpp
src/renderer/effects/: BloomManager.cpp  ExposureManager.cpp  OitManager.cpp
src/renderer/lighting/: EditableLight.cpp  EnvironmentManager.cpp  LightGizmoIconAtlas.cpp  LightingManager.cpp
src/renderer/picking/: RenderSurfaceInteractionController.cpp  TransparentPickDepthCopyRecorder.cpp  TransparentPickPassRecorder.cpp  TransparentPickRasterPassRecorder.cpp
src/renderer/pipeline/: GraphicsPipelineBuilder.cpp  PipelineRegistry.cpp
src/renderer/platform/: VulkanContext.cpp  VulkanContextInitializer.cpp  WindowInputBridge.cpp
src/renderer/resources/: CommandBufferManager.cpp  FrameResourceManager.cpp  FrameResourceRegistry.cpp
src/renderer/scene/: CameraController.cpp  SceneController.cpp  SceneDiagnosticCubeRecorder.cpp  SceneOpaqueDrawPlanner.cpp  SceneOpaqueDrawRecorder.cpp  ScenePrimitives.cpp  SceneRasterPassPlanner.cpp  SceneRasterPassRecorder.cpp  SceneTransparentDrawPlanner.cpp  SceneTransparentDrawRecorder.cpp  SceneViewport.cpp
src/renderer/shadow/: ShadowCascadeDrawPlanner.cpp  ShadowCascadeFramePassRecorder.cpp  ShadowCascadeGpuCullPlanner.cpp  ShadowCascadePreparationPlanner.cpp  ShadowCascadeSecondaryCommandBufferRecorder.cpp  ShadowCullManager.cpp  ShadowCullPassPlanner.cpp  ShadowCullPassRecorder.cpp  ShadowManager.cpp  ShadowPassDrawPlanner.cpp  ShadowPassRasterPlanner.cpp  ShadowPassRasterRecorder.cpp  ShadowPassRecorder.cpp  ShadowPassScopePlanner.cpp  ShadowSecondaryCommandBufferPlanner.cpp
src/utility/: AllocationManager.cpp  BcfViewpoint.cpp  CMakeLists.txt  FrameSyncManager.cpp  GuiManager.cpp  InputManager.cpp  Logger.cpp  MaterialManager.cpp  MaterialXIntegration.cpp  PipelineManager.cpp  SceneGraph.cpp  SceneManager.cpp  SwapChainManager.cpp  TextureManager.cpp  VkResultToString.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanMemoryManager.cpp  WindowManager.cpp
(+457 files in other folders)
